--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.25.4"
   }
 }
